feat: integrate Gemini LLM and fix intent detection

--- a/.env.example
+++ b/.env.example
@@ -11,3 +11,7 @@
 # Google Sheet ID (from the spreadsheet URL)
 # https://docs.google.com/spreadsheets/d/<THIS_IS_THE_SHEET_ID>/edit
 GOOGLE_SHEET_ID=your-google-sheet-id-here
+
+# Google Gemini LLM (optional — enables AI-powered natural language responses)
+# Get a free API key from https://aistudio.google.com
+GEMINI_API_KEY=your-gemini-api-key-here
